compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_module_from_namespaced_use.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport testing  / mod\n\nfn func() {\n  echo mod  . constant\n}\n"
---
----- BEFORE RENAME
-- testing/mod.gleam
pub const constant = 10

-- app.gleam

import testing  / mod

fn func() {
  echo mod  . constant
       ↑▔▔            
}


----- AFTER RENAME
-- testing/mod.gleam
pub const constant = 10

-- app.gleam

import testing  / mod as module

fn func() {
  echo module  . constant
}
